# agentweave

./: .gitignore  README.md  pyproject.toml
scripts/: list_assemblies.py  list_benchmarks.py  run_experiment.py
src/goalstack_agent/: __init__.py  errors.py
src/goalstack_agent/agent_core/: __init__.py  base.py  direct.py  goalstack.py
src/goalstack_agent/assemblies/: __init__.py  base.py  placeholders.py  synthetic.py
src/goalstack_agent/benchmarks/: __init__.py  base.py
src/goalstack_agent/benchmarks/bfcl/: README.md  benchmark_stub.py
src/goalstack_agent/benchmarks/synthetic/: benchmark.py  cases.py
src/goalstack_agent/benchmarks/tau_bench/: README.md  benchmark_stub.py
src/goalstack_agent/capabilities/: __init__.py  base.py
src/goalstack_agent/capability_selection/: __init__.py  base.py  llm.py  static.py
src/goalstack_agent/experiments/: __init__.py  result.py  runner.py  synthetic_fake_direct.py  synthetic_goalstack_placeholder.py
src/goalstack_agent/fact_management/: __init__.py  base.py  in_memory.py  long_context.py
src/goalstack_agent/model_clients/: __init__.py  base.py  fake.py  openai.py
src/goalstack_agent/reporting/: __init__.py  json_reporter.py  markdown_reporter.py
src/goalstack_agent/response_composition/: __init__.py  base.py  direct.py  llm.py
tests/integration/: test_synthetic_fake_direct.py
tests/unit/: test_agent_core.py  test_assemblies.py  test_benchmarks.py  test_capabilities.py  test_capability_selection.py  test_fact_management.py  test_model_clients.py  test_response_composition.py
(+8 files in other folders)
